--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,13 @@
         }
     ],
     "require": {
-        "php" : "~7.1"
+        "php": "~7.1",
+        "psr/container": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=7.0",
-        "squizlabs/php_codesniffer": "^3.0"
+        "squizlabs/php_codesniffer": "^3.0",
+        "symfony/var-dumper": "^4.3"
     },
     "autoload": {
         "psr-4": {
@@ -29,7 +31,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Antidot\\Container\\": "tests"
+            "AntidotTest\\Container\\": "tests"
         }
     },
     "scripts": {
