--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "psr/container": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit" : ">=7.0",
+        "phpro/grumphp": "^0.16.0",
+        "phpstan/phpstan": "^0.11.15",
+        "phpunit/phpunit": ">=7.0",
         "squizlabs/php_codesniffer": "^3.0",
         "symfony/var-dumper": "^4.3"
     },
@@ -35,9 +37,15 @@
         }
     },
     "scripts": {
+        "check-all": [
+            "@test",
+            "@check-style",
+            "@inspect"
+        ],
         "test": "phpunit",
         "check-style": "phpcs src tests",
-        "fix-style": "phpcbf src tests"
+        "fix-style": "phpcbf src tests",
+        "inspect": "phpstan analyse src -l7 --ansi"
     },
     "extra": {
         "branch-alias": {
