--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         }
     ],
     "require": {
-        "php": "~7.1",
+        "php": "^7.4.0",
         "psr/container": "^1.0"
     },
     "require-dev": {
-        "phpro/grumphp": "^0.16.0",
+        "phpro/grumphp": "^0.17.1",
         "phpstan/phpstan": "^0.11.15",
         "phpunit/phpunit": ">=7.5",
         "squizlabs/php_codesniffer": "^3.0",
