--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
-dist: trusty
+dist: xenial
 language: php
 
 php:
-  - 7.1
-  - 7.2
-  - 7.3
+  - 7.4
 
 # This triggers builds to run on the new TravisCI infrastructure.
 # See: http://docs.travis-ci.com/user/workers/container-based-infrastructure/
@@ -17,7 +15,7 @@ cache:
 
 matrix:
   include:
-    - php: 7.1
+    - php: 7.4
       env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
 
 before_script:
