--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
         }
     ],
     "require": {
-        "php": "^7.4.0",
+        "php": ">=7.4.0",
         "psr/container": "^1.0"
     },
     "require-dev": {
         "phpro/grumphp": "^1.0.0",
-        "phpstan/phpstan": "^0.11.15 || ^0.12.0",
+        "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": "^8.0 || ^9.0",
         "squizlabs/php_codesniffer": "^3.4",
-        "symfony/var-dumper": "^4.3 || ^5.0"
+        "symfony/var-dumper": "^5.0"
     },
     "autoload": {
         "psr-4": {
