--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,14 +1,19 @@
 <?xml version="1.0"?>
 <ruleset name="container">
     <description>The coding standard of container package</description>
-    <arg value="p" />
+    <!-- display progress -->
+    <arg value="p"/>
+    <arg name="colors"/>
 
-    <config name="ignore_warnings_on_exit" value="1" />
-    <config name="ignore_errors_on_exit" value="1" />
+    <!-- inherit rules from: -->
+    <rule ref="PSR12"/>
+    <rule ref="Generic.Arrays.DisallowLongArraySyntax"/>
+    <rule ref="Squiz.WhiteSpace.SuperfluousWhitespace">
+    <properties>
+    <property name="ignoreBlankLines" value="false"/>
+    </properties>
+    </rule>
 
-    <arg name="colors" />
-    <arg value="s" />
-
-    <!-- Use the PSR2 Standard-->
-    <rule ref="PSR2" />
-</ruleset>
+    <!-- Paths to check -->
+    <file>src</file>
+    </ruleset>
