run check all command in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ before_script:
   - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
 
 script:
-  - vendor/bin/phpcs --standard=psr2 src/
+  - composer check-all
   - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
