--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: php
 
 php:
   - 7.4
+  - 8.0snapshot
 
 # This triggers builds to run on the new TravisCI infrastructure.
 # See: http://docs.travis-ci.com/user/workers/container-based-infrastructure/
@@ -17,6 +18,8 @@ matrix:
   include:
     - php: 7.4
       env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
+    - php: 8.0snapshot
+      env: 'COMPOSER_FLAGS="--prefer-stable"'
 
 before_script:
   - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
