--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": "^8.0 || ^9.0",
         "squizlabs/php_codesniffer": "^3.5",
+        "phpro/grumphp": "~1.0",
         "symfony/var-dumper": "^5.0"
     },
     "autoload": {
