--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,14 @@
         }
     ],
     "require": {
-        "php": ">=7.4.0|^8.0",
-        "psr/container": "^1.0"
+        "php": "~8.1.0 || ~8.2.0",
+        "psr/container": "^2.0"
     },
     "require-dev": {
-        "infection/infection": "^0.25",
         "phpro/grumphp": "^1.0",
         "phpstan/phpstan": "^1.2",
         "phpunit/phpunit": "^9.0",
-        "roave/infection-static-analysis-plugin": "^1.11",
+        "roave/infection-static-analysis-plugin": "^1.32",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/var-dumper": "^5.0",
         "vimeo/psalm": "^4.0.0"
@@ -60,6 +59,10 @@
         }
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "infection/extension-installer": true,
+            "phpro/grumphp": true
+        }
     }
 }
